--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -6,16 +6,192 @@
 
   background-color: #131313;
   transition: transform 275ms linear, opacity 275ms linear;
-  overflow: hidden;
-  pointer-events: none;
+  /* overflow: hidden; */
+  /* pointer-events: none; */
 }
+
 .hero-container {
+  border: 1px solid gold;
+  /* height: 100%; */
+  position: relative;
+}
+
+.hero-container,
+.hero-author-info-container,
+.hero-mask-author-info-container {
+  height: 100%;
+}
+
+.hero-author-info-container,
+.hero-mask-author-info-container {
+  border: 1px solid red;
+  /* height: 100%; */
+  display: grid;
+  place-items: center;
+}
+
+.hero-author-info-wrapper,
+.hero-mask-author-info-wrapper {
+  /* border: 1px solid blue; */
+  /* color: #fff; */
+  max-width: 700px;
+  margin-inline: auto;
+  /* margin-block-start: 200px; */
+  text-align: center;
+
+  position: relative;
+}
+
+.hero-author-info-wrapper {
+  color: #777777;
+}
+.hero-mask-author-info-wrapper {
+  color: #fff;
+}
+
+.hero-main-heading,
+.hero-mask-main-heading {
+  font-size: 3rem;
+  font-weight: 600;
+  margin-block-start: 1rem;
+}
+
+.hero-main-heading span,
+.hero-mask-main-heading span {
+  display: block;
+}
+
+.hero-author-info-wrapper > p,
+.hero-mask-author-info-wrapper > p {
+  margin-block: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.5;
+}
+
+.hero-author-info-wrapper > img,
+.hero-mask-author-info-wrapper > img {
+  object-fit: cover;
+  object-position: top;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  transform: translateX(0);
+  transition: transform 2500ms ease-out;
+}
+
+.hero-author-info-wrapper > img {
+  filter: grayscale(1);
+}
+
+.hero-social-btns-wrapper,
+.hero-mask-social-btns-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.hero-social-btns-wrapper > button,
+.hero-mask-social-btns-wrapper > button {
+  border: 1px solid red;
+  padding: 0.5rem 1rem;
+}
+
+.hero-social-btns-wrapper > button {
+  color: #777777;
+}
+
+.hero-mask-author-info-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: #0a2647;
+  clip-path: circle(100% at -28% 50%);
+  -wekit-clip-path: circle(100% at -28% 50%);
+  transition: clip-path 700ms ease-out, -wekit-clip-path 700ms ease-out;
+}
+
+.boring-avatars-1,
+.boring-avatars-2,
+.boring-avatars-3,
+.boring-avatars-4,
+.boring-avatars-5,
+.boring-avatars-6,
+.boring-avatars-7,
+.boring-avatars-8 {
+  position: absolute;
+}
+
+.boring-avatars-1 {
+  top: -20%;
+  left: 50%;
+}
+.boring-avatars-1 svg {
+  width: 60px;
+  height: 60px;
+}
+
+.boring-avatars-2 {
+  top: 40%;
+  left: 90%;
+}
+
+.boring-avatars-2 svg {
+  width: 40px;
+  height: 40px;
+}
+
+.boring-avatars-3 {
+  top: 35%;
+  left: 20%;
+}
+
+.boring-avatars-3 svg {
+  width: 35px;
+  height: 35px;
+}
+
+.boring-avatars-4 {
+  top: -5%;
+  left: 10%;
+}
+.boring-avatars-4 svg {
+  width: 30px;
+  height: 30px;
+}
+
+.boring-avatars-5 {
+  top: 30%;
+  left: -10%;
+}
+.boring-avatars-5 svg {
+  width: 60px;
+  height: 60px;
+}
+.boring-avatars-6 {
+  top: 0%;
+  left: 100%;
+}
+.boring-avatars-6 svg {
+  width: 60px;
+  height: 60px;
+}
+
+.hero-author-info-container > .boring-avatars-1 {
+  color: gray;
+}
+
+/* .hero-container {
   height: 100%;
   width: 100%;
 }
 
 .hero-title-container {
   padding: 6rem 1rem 0 1rem;
+
+ 
 }
 
 .hero-full-container h1 {
@@ -117,4 +293,4 @@
   pointer-events: none;
   transition: clip-path 400ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
     -webkit-clip-path 400ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
+} */
